Fix chart clipping, more institutional color palette

--- a/static/style.css
+++ b/static/style.css
@@ -8,10 +8,10 @@
   --amber-dim: #7a5600;
   --white: #eae6da;
   --dim: #77756b;
-  --green: #00d964;
-  --green-dim: #0a4a28;
-  --red: #ff3b30;
-  --red-dim: #4a1410;
+  --green: #4a9a6e;
+  --green-dim: #1a3324;
+  --red: #b8524a;
+  --red-dim: #3a1e1a;
 }
 * { box-sizing: border-box; }
 html, body {
